@@ -5,6 +5,10 @@ Revision history for Perl extension TAP::Formatter::JUnit.
       to differences in ordering of XML attributes.  Addresses RT#81552
     - Use "File::Spec->null()" to get proper path to NULL.  RT#81200, RT#82227.
     - Moved POD tests to "xt/" directory.
+    - Move timing sensitive tests to "xt/" directory, as they can cause
+      spurious failures for people.  While _I_ want to make sure they run
+      successfully, that's about my checking functionality as opposed to
+      verifying if things will run successfully on your own system.  RT#69777.
 
 0.09    Wed Jan 25 15:13 PST 2012
     - Switch from Class::Field to Moose.  Thanks to Dave Lambley for the poke,
